# dual-gpu-orchestrator

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
docs/reference/: lmstudio-mcp-via-api.md  lmstudio-rest-api.md
docs/superpowers/plans/: 2026-06-14-phase1-single-agent-loop.md  2026-06-14-phase2-dual-agent-orchestration.md  2026-06-14-phase3-mcp-research.md  2026-06-19-phase4-web-ui.md
docs/superpowers/specs/: 2026-06-14-phase2-dual-agent-orchestration-design.md  2026-06-14-phase3-mcp-research-design.md  2026-06-15-dual-gpu-orchestrator-design.md  2026-06-19-phase4-web-ui-design.md  2026-06-21-advance-retry-verbs-design.md
orchestrator/: __init__.py  agent.py  cli.py  composite_registry.py  config.py  coordination.py  env.py  events.py  llm_client.py  mcp_research.py  orchestrator.py  plan.py  planner.py  protocol.py  run_manager.py  sandbox.py  server.py  smoke.py  tools.py
orchestrator/static/: app.js  index.html  style.css
tests/: test_agent.py  test_cli.py  test_composite_registry.py  test_config.py  test_coordination.py  test_env.py  test_events.py  test_llm_client.py  test_mcp_research.py  test_orchestrator.py  test_plan.py  test_planner.py  test_protocol.py  test_run_manager.py  test_sandbox.py  test_server.py  test_tools.py
